{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 32,
  "lineage": "1e13a994-4c14-d166-1a2b-014ca805c9c0",
  "resources": [
    {
      "module": "module.elastic-ip",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eips_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "nat_gateway",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-072c07b653f2a14c9",
            "arn": "arn:aws:ec2:us-east-1:125480470368:elastic-ip/eipalloc-072c07b653f2a14c9",
            "domain": "vpc",
            "id": "eipalloc-072c07b653f2a14c9",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-225-189-101.compute-1.amazonaws.com",
            "public_ip": "3.225.189.101",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-nat"
            },
            "tags_all": {
              "Domain": "infra-dev",
              "Environment": "dev",
              "Name": "eip-nat",
              "Provisioning-method": "terraform",
              "Template": "infra-new-account"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.internet-gtw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:125480470368:internet-gateway/igw-0a4d69cc29cd52a62",
            "id": "igw-0a4d69cc29cd52a62",
            "owner_id": "125480470368",
            "tags": {
              "Name": "infra-dev-igw"
            },
            "tags_all": {
              "Domain": "infra-dev",
              "Environment": "dev",
              "Name": "infra-dev-igw",
              "Provisioning-method": "terraform",
              "Template": "infra-new-account"
            },
            "vpc_id": "vpc-0e83db1956282385e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.flow_log_bucket.aws_s3_bucket.flow_logs",
            "module.flow_log_bucket.aws_s3_bucket_ownership_controls.owner",
            "module.flow_log_bucket.aws_s3_bucket_policy.flow_logs_policy",
            "module.flow_log_bucket.aws_s3_bucket_public_access_block.block",
            "module.vpc.aws_vpc.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.nat-gtw",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gtw_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-072c07b653f2a14c9",
            "association_id": "eipassoc-05872aa858a6249a8",
            "connectivity_type": "public",
            "id": "nat-05d2f488b4d1c58d5",
            "network_interface_id": "eni-0e4225d9d13de0252",
            "private_ip": "10.50.3.204",
            "public_ip": "3.225.189.101",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-064b2c0ef6d5d341b",
            "tags": {
              "Name": "infra-dev-nat"
            },
            "tags_all": {
              "Domain": "infra-dev",
              "Environment": "dev",
              "Name": "infra-dev-nat",
              "Provisioning-method": "terraform",
              "Template": "infra-new-account"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.elastic-ip.aws_eip.eips_id",
            "module.flow_log_bucket.aws_s3_bucket.flow_logs",
            "module.flow_log_bucket.aws_s3_bucket_ownership_controls.owner",
            "module.flow_log_bucket.aws_s3_bucket_policy.flow_logs_policy",
            "module.flow_log_bucket.aws_s3_bucket_public_access_block.block",
            "module.internet-gtw.aws_internet_gateway.igw_id",
            "module.subnets.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_gtw_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a4d69cc29cd52a62",
            "id": "r-rtb-0fc2109558623bb051080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fc2109558623bb05",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.flow_log_bucket.aws_s3_bucket.flow_logs",
            "module.flow_log_bucket.aws_s3_bucket_ownership_controls.owner",
            "module.flow_log_bucket.aws_s3_bucket_policy.flow_logs_policy",
            "module.flow_log_bucket.aws_s3_bucket_public_access_block.block",
            "module.internet-gtw.aws_internet_gateway.igw_id",
            "module.route_tables.aws_route_table.public_rt",
            "module.subnets.aws_subnet.private_subnet",
            "module.subnets.aws_subnet.public_subnet",
            "module.vpc.aws_flow_log.vpc_flow_log",
            "module.vpc.aws_vpc.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_gateway_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "infra-dev-rtb-private1-az-1a",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00c91818feafdfb641080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05d2f488b4d1c58d5",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00c91818feafdfb64",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.elastic-ip.aws_eip.eips_id",
            "module.flow_log_bucket.aws_s3_bucket.flow_logs",
            "module.flow_log_bucket.aws_s3_bucket_ownership_controls.owner",
            "module.flow_log_bucket.aws_s3_bucket_policy.flow_logs_policy",
            "module.flow_log_bucket.aws_s3_bucket_public_access_block.block",
            "module.internet-gtw.aws_internet_gateway.igw_id",
            "module.nat-gtw.aws_nat_gateway.nat_gtw_id",
            "module.route_tables.aws_route_table.private_rt",
            "module.subnets.aws_subnet.private_subnet",
            "module.subnets.aws_subnet.public_subnet",
            "module.vpc.aws_flow_log.vpc_flow_log",
            "module.vpc.aws_vpc.vpc_id"
          ]
        },
        {
          "index_key": "infra-dev-rtb-private2-az-1b",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b2297d4d961906121080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05d2f488b4d1c58d5",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b2297d4d96190612",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.elastic-ip.aws_eip.eips_id",
            "module.flow_log_bucket.aws_s3_bucket.flow_logs",
            "module.flow_log_bucket.aws_s3_bucket_ownership_controls.owner",
            "module.flow_log_bucket.aws_s3_bucket_policy.flow_logs_policy",
            "module.flow_log_bucket.aws_s3_bucket_public_access_block.block",
            "module.internet-gtw.aws_internet_gateway.igw_id",
            "module.nat-gtw.aws_nat_gateway.nat_gtw_id",
            "module.route_tables.aws_route_table.private_rt",
            "module.subnets.aws_subnet.private_subnet",
            "module.subnets.aws_subnet.public_subnet",
            "module.vpc.aws_flow_log.vpc_flow_log",
            "module.vpc.aws_vpc.vpc_id"
          ]
        },
        {
          "index_key": "infra-dev-rtb-private3-az-1b",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05eaa08622a7b0ee81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05d2f488b4d1c58d5",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05eaa08622a7b0ee8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.elastic-ip.aws_eip.eips_id",
            "module.flow_log_bucket.aws_s3_bucket.flow_logs",
            "module.flow_log_bucket.aws_s3_bucket_ownership_controls.owner",
            "module.flow_log_bucket.aws_s3_bucket_policy.flow_logs_policy",
            "module.flow_log_bucket.aws_s3_bucket_public_access_block.block",
            "module.internet-gtw.aws_internet_gateway.igw_id",
            "module.nat-gtw.aws_nat_gateway.nat_gtw_id",
            "module.route_tables.aws_route_table.private_rt",
            "module.subnets.aws_subnet.private_subnet",
            "module.subnets.aws_subnet.public_subnet",
            "module.vpc.aws_flow_log.vpc_flow_log",
            "module.vpc.aws_vpc.vpc_id"
          ]
        },
        {
          "index_key": "infra-dev-rtb-private4-az-1b",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ed975905861145031080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05d2f488b4d1c58d5",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ed97590586114503",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.elastic-ip.aws_eip.eips_id",
            "module.flow_log_bucket.aws_s3_bucket.flow_logs",
            "module.flow_log_bucket.aws_s3_bucket_ownership_controls.owner",
            "module.flow_log_bucket.aws_s3_bucket_policy.flow_logs_policy",
            "module.flow_log_bucket.aws_s3_bucket_public_access_block.block",
            "module.internet-gtw.aws_internet_gateway.igw_id",
            "module.nat-gtw.aws_nat_gateway.nat_gtw_id",
            "module.route_tables.aws_route_table.private_rt",
            "module.subnets.aws_subnet.private_subnet",
            "module.subnets.aws_subnet.public_subnet",
            "module.vpc.aws_flow_log.vpc_flow_log",
            "module.vpc.aws_vpc.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "infra-dev-rtb-private1-az-1a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:125480470368:route-table/rtb-00c91818feafdfb64",
            "id": "rtb-00c91818feafdfb64",
            "owner_id": "125480470368",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "infra-dev-rtb-private1-az-1a"
            },
            "tags_all": {
              "Domain": "infra-dev",
              "Environment": "dev",
              "Name": "infra-dev-rtb-private1-az-1a",
              "Provisioning-method": "terraform",
              "Template": "infra-new-account"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e83db1956282385e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.flow_log_bucket.aws_s3_bucket.flow_logs",
            "module.flow_log_bucket.aws_s3_bucket_ownership_controls.owner",
            "module.flow_log_bucket.aws_s3_bucket_policy.flow_logs_policy",
            "module.flow_log_bucket.aws_s3_bucket_public_access_block.block",
            "module.subnets.aws_subnet.private_subnet",
            "module.subnets.aws_subnet.public_subnet",
            "module.vpc.aws_flow_log.vpc_flow_log",
            "module.vpc.aws_vpc.vpc_id"
          ]
        },
        {
          "index_key": "infra-dev-rtb-private2-az-1b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:125480470368:route-table/rtb-0b2297d4d96190612",
            "id": "rtb-0b2297d4d96190612",
            "owner_id": "125480470368",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "infra-dev-rtb-private2-az-1b"
            },
            "tags_all": {
              "Domain": "infra-dev",
              "Environment": "dev",
              "Name": "infra-dev-rtb-private2-az-1b",
              "Provisioning-method": "terraform",
              "Template": "infra-new-account"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e83db1956282385e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.flow_log_bucket.aws_s3_bucket.flow_logs",
            "module.flow_log_bucket.aws_s3_bucket_ownership_controls.owner",
            "module.flow_log_bucket.aws_s3_bucket_policy.flow_logs_policy",
            "module.flow_log_bucket.aws_s3_bucket_public_access_block.block",
            "module.subnets.aws_subnet.private_subnet",
            "module.subnets.aws_subnet.public_subnet",
            "module.vpc.aws_flow_log.vpc_flow_log",
            "module.vpc.aws_vpc.vpc_id"
          ]
        },
        {
          "index_key": "infra-dev-rtb-private3-az-1b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:125480470368:route-table/rtb-05eaa08622a7b0ee8",
            "id": "rtb-05eaa08622a7b0ee8",
            "owner_id": "125480470368",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "infra-dev-rtb-private3-az-1b"
            },
            "tags_all": {
              "Domain": "infra-dev",
              "Environment": "dev",
              "Name": "infra-dev-rtb-private3-az-1b",
              "Provisioning-method": "terraform",
              "Template": "infra-new-account"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e83db1956282385e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.flow_log_bucket.aws_s3_bucket.flow_logs",
            "module.flow_log_bucket.aws_s3_bucket_ownership_controls.owner",
            "module.flow_log_bucket.aws_s3_bucket_policy.flow_logs_policy",
            "module.flow_log_bucket.aws_s3_bucket_public_access_block.block",
            "module.subnets.aws_subnet.private_subnet",
            "module.subnets.aws_subnet.public_subnet",
            "module.vpc.aws_flow_log.vpc_flow_log",
            "module.vpc.aws_vpc.vpc_id"
          ]
        },
        {
          "index_key": "infra-dev-rtb-private4-az-1b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:125480470368:route-table/rtb-0ed97590586114503",
            "id": "rtb-0ed97590586114503",
            "owner_id": "125480470368",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "infra-dev-rtb-private4-az-1b"
            },
            "tags_all": {
              "Domain": "infra-dev",
              "Environment": "dev",
              "Name": "infra-dev-rtb-private4-az-1b",
              "Provisioning-method": "terraform",
              "Template": "infra-new-account"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e83db1956282385e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.flow_log_bucket.aws_s3_bucket.flow_logs",
            "module.flow_log_bucket.aws_s3_bucket_ownership_controls.owner",
            "module.flow_log_bucket.aws_s3_bucket_policy.flow_logs_policy",
            "module.flow_log_bucket.aws_s3_bucket_public_access_block.block",
            "module.subnets.aws_subnet.private_subnet",
            "module.subnets.aws_subnet.public_subnet",
            "module.vpc.aws_flow_log.vpc_flow_log",
            "module.vpc.aws_vpc.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:125480470368:route-table/rtb-0fc2109558623bb05",
            "id": "rtb-0fc2109558623bb05",
            "owner_id": "125480470368",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "rtb-public"
            },
            "tags_all": {
              "Domain": "infra-dev",
              "Environment": "dev",
              "Name": "rtb-public",
              "Provisioning-method": "terraform",
              "Template": "infra-new-account"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e83db1956282385e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.flow_log_bucket.aws_s3_bucket.flow_logs",
            "module.flow_log_bucket.aws_s3_bucket_ownership_controls.owner",
            "module.flow_log_bucket.aws_s3_bucket_policy.flow_logs_policy",
            "module.flow_log_bucket.aws_s3_bucket_public_access_block.block",
            "module.subnets.aws_subnet.private_subnet",
            "module.subnets.aws_subnet.public_subnet",
            "module.vpc.aws_flow_log.vpc_flow_log",
            "module.vpc.aws_vpc.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03226123f45f920e4",
            "route_table_id": "rtb-00c91818feafdfb64",
            "subnet_id": "subnet-00b61119b18edb377"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.flow_log_bucket.aws_s3_bucket.flow_logs",
            "module.flow_log_bucket.aws_s3_bucket_ownership_controls.owner",
            "module.flow_log_bucket.aws_s3_bucket_policy.flow_logs_policy",
            "module.flow_log_bucket.aws_s3_bucket_public_access_block.block",
            "module.route_tables.aws_route_table.private_rt",
            "module.subnets.aws_subnet.private_subnet",
            "module.subnets.aws_subnet.public_subnet",
            "module.vpc.aws_flow_log.vpc_flow_log",
            "module.vpc.aws_vpc.vpc_id"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0337d0dcdbc579159",
            "route_table_id": "rtb-0b2297d4d96190612",
            "subnet_id": "subnet-03ef590ae2e50a6ba"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.flow_log_bucket.aws_s3_bucket.flow_logs",
            "module.flow_log_bucket.aws_s3_bucket_ownership_controls.owner",
            "module.flow_log_bucket.aws_s3_bucket_policy.flow_logs_policy",
            "module.flow_log_bucket.aws_s3_bucket_public_access_block.block",
            "module.route_tables.aws_route_table.private_rt",
            "module.subnets.aws_subnet.private_subnet",
            "module.subnets.aws_subnet.public_subnet",
            "module.vpc.aws_flow_log.vpc_flow_log",
            "module.vpc.aws_vpc.vpc_id"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077f0865836408056",
            "route_table_id": "rtb-05eaa08622a7b0ee8",
            "subnet_id": "subnet-0677f768f1f15b9d7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.flow_log_bucket.aws_s3_bucket.flow_logs",
            "module.flow_log_bucket.aws_s3_bucket_ownership_controls.owner",
            "module.flow_log_bucket.aws_s3_bucket_policy.flow_logs_policy",
            "module.flow_log_bucket.aws_s3_bucket_public_access_block.block",
            "module.route_tables.aws_route_table.private_rt",
            "module.subnets.aws_subnet.private_subnet",
            "module.subnets.aws_subnet.public_subnet",
            "module.vpc.aws_flow_log.vpc_flow_log",
            "module.vpc.aws_vpc.vpc_id"
          ]
        },
        {
          "index_key": "3",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a84b7fc25ce1eac",
            "route_table_id": "rtb-0ed97590586114503",
            "subnet_id": "subnet-09e6c21ec57d9aa53"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.flow_log_bucket.aws_s3_bucket.flow_logs",
            "module.flow_log_bucket.aws_s3_bucket_ownership_controls.owner",
            "module.flow_log_bucket.aws_s3_bucket_policy.flow_logs_policy",
            "module.flow_log_bucket.aws_s3_bucket_public_access_block.block",
            "module.route_tables.aws_route_table.private_rt",
            "module.subnets.aws_subnet.private_subnet",
            "module.subnets.aws_subnet.public_subnet",
            "module.vpc.aws_flow_log.vpc_flow_log",
            "module.vpc.aws_vpc.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5deb064bf2dd8cb",
            "route_table_id": "rtb-0fc2109558623bb05",
            "subnet_id": "subnet-064b2c0ef6d5d341b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.flow_log_bucket.aws_s3_bucket.flow_logs",
            "module.flow_log_bucket.aws_s3_bucket_ownership_controls.owner",
            "module.flow_log_bucket.aws_s3_bucket_policy.flow_logs_policy",
            "module.flow_log_bucket.aws_s3_bucket_public_access_block.block",
            "module.route_tables.aws_route_table.public_rt",
            "module.subnets.aws_subnet.private_subnet",
            "module.subnets.aws_subnet.public_subnet",
            "module.vpc.aws_flow_log.vpc_flow_log",
            "module.vpc.aws_vpc.vpc_id"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-093025cf4c28402df",
            "route_table_id": "rtb-0fc2109558623bb05",
            "subnet_id": "subnet-00e41087bf7e5234e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.flow_log_bucket.aws_s3_bucket.flow_logs",
            "module.flow_log_bucket.aws_s3_bucket_ownership_controls.owner",
            "module.flow_log_bucket.aws_s3_bucket_policy.flow_logs_policy",
            "module.flow_log_bucket.aws_s3_bucket_public_access_block.block",
            "module.route_tables.aws_route_table.public_rt",
            "module.subnets.aws_subnet.private_subnet",
            "module.subnets.aws_subnet.public_subnet",
            "module.vpc.aws_flow_log.vpc_flow_log",
            "module.vpc.aws_vpc.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:125480470368:subnet/subnet-00b61119b18edb377",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.50.8.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b61119b18edb377",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "125480470368",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "infra-dev-subnet-private1-az-1a"
            },
            "tags_all": {
              "Domain": "infra-dev",
              "Environment": "dev",
              "Name": "infra-dev-subnet-private1-az-1a",
              "Provisioning-method": "terraform",
              "Template": "infra-new-account"
            },
            "vpc_id": "vpc-0e83db1956282385e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.flow_log_bucket.aws_s3_bucket.flow_logs",
            "module.flow_log_bucket.aws_s3_bucket_ownership_controls.owner",
            "module.flow_log_bucket.aws_s3_bucket_policy.flow_logs_policy",
            "module.flow_log_bucket.aws_s3_bucket_public_access_block.block",
            "module.vpc.aws_vpc.vpc_id"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:125480470368:subnet/subnet-03ef590ae2e50a6ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.50.12.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ef590ae2e50a6ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "125480470368",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "infra-dev-subnet-private2-az-1b"
            },
            "tags_all": {
              "Domain": "infra-dev",
              "Environment": "dev",
              "Name": "infra-dev-subnet-private2-az-1b",
              "Provisioning-method": "terraform",
              "Template": "infra-new-account"
            },
            "vpc_id": "vpc-0e83db1956282385e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.flow_log_bucket.aws_s3_bucket.flow_logs",
            "module.flow_log_bucket.aws_s3_bucket_ownership_controls.owner",
            "module.flow_log_bucket.aws_s3_bucket_policy.flow_logs_policy",
            "module.flow_log_bucket.aws_s3_bucket_public_access_block.block",
            "module.vpc.aws_vpc.vpc_id"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:125480470368:subnet/subnet-0677f768f1f15b9d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.50.16.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0677f768f1f15b9d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "125480470368",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "infra-dev-subnet-private3-az-1a"
            },
            "tags_all": {
              "Domain": "infra-dev",
              "Environment": "dev",
              "Name": "infra-dev-subnet-private3-az-1a",
              "Provisioning-method": "terraform",
              "Template": "infra-new-account"
            },
            "vpc_id": "vpc-0e83db1956282385e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.flow_log_bucket.aws_s3_bucket.flow_logs",
            "module.flow_log_bucket.aws_s3_bucket_ownership_controls.owner",
            "module.flow_log_bucket.aws_s3_bucket_policy.flow_logs_policy",
            "module.flow_log_bucket.aws_s3_bucket_public_access_block.block",
            "module.vpc.aws_vpc.vpc_id"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:125480470368:subnet/subnet-09e6c21ec57d9aa53",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.50.20.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09e6c21ec57d9aa53",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "125480470368",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "infra-dev-subnet-private4-az-1b"
            },
            "tags_all": {
              "Domain": "infra-dev",
              "Environment": "dev",
              "Name": "infra-dev-subnet-private4-az-1b",
              "Provisioning-method": "terraform",
              "Template": "infra-new-account"
            },
            "vpc_id": "vpc-0e83db1956282385e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.flow_log_bucket.aws_s3_bucket.flow_logs",
            "module.flow_log_bucket.aws_s3_bucket_ownership_controls.owner",
            "module.flow_log_bucket.aws_s3_bucket_policy.flow_logs_policy",
            "module.flow_log_bucket.aws_s3_bucket_public_access_block.block",
            "module.vpc.aws_vpc.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:125480470368:subnet/subnet-064b2c0ef6d5d341b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.50.0.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-064b2c0ef6d5d341b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "125480470368",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "infra-dev-subnet-public1-az-1a"
            },
            "tags_all": {
              "Domain": "infra-dev",
              "Environment": "dev",
              "Name": "infra-dev-subnet-public1-az-1a",
              "Provisioning-method": "terraform",
              "Template": "infra-new-account"
            },
            "vpc_id": "vpc-0e83db1956282385e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.flow_log_bucket.aws_s3_bucket.flow_logs",
            "module.flow_log_bucket.aws_s3_bucket_ownership_controls.owner",
            "module.flow_log_bucket.aws_s3_bucket_policy.flow_logs_policy",
            "module.flow_log_bucket.aws_s3_bucket_public_access_block.block",
            "module.vpc.aws_vpc.vpc_id"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:125480470368:subnet/subnet-00e41087bf7e5234e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.50.4.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e41087bf7e5234e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "125480470368",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "infra-dev-subnet-public2-az-1b"
            },
            "tags_all": {
              "Domain": "infra-dev",
              "Environment": "dev",
              "Name": "infra-dev-subnet-public2-az-1b",
              "Provisioning-method": "terraform",
              "Template": "infra-new-account"
            },
            "vpc_id": "vpc-0e83db1956282385e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.flow_log_bucket.aws_s3_bucket.flow_logs",
            "module.flow_log_bucket.aws_s3_bucket_ownership_controls.owner",
            "module.flow_log_bucket.aws_s3_bucket_policy.flow_logs_policy",
            "module.flow_log_bucket.aws_s3_bucket_public_access_block.block",
            "module.vpc.aws_vpc.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:125480470368:vpc/vpc-0e83db1956282385e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.50.0.0/18",
            "default_network_acl_id": "acl-053b002d2ca04af7c",
            "default_route_table_id": "rtb-0e996e6c66a788dd0",
            "default_security_group_id": "sg-004b4bad41d23b6c5",
            "dhcp_options_id": "dopt-06d1899ad1c6ada91",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e83db1956282385e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e996e6c66a788dd0",
            "owner_id": "125480470368",
            "tags": {
              "Name": "infra-dev-vpc"
            },
            "tags_all": {
              "Domain": "infra-dev",
              "Environment": "dev",
              "Name": "infra-dev-vpc",
              "Provisioning-method": "terraform",
              "Template": "infra-new-account"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.flow_log_bucket.aws_s3_bucket.flow_logs",
            "module.flow_log_bucket.aws_s3_bucket_ownership_controls.owner",
            "module.flow_log_bucket.aws_s3_bucket_policy.flow_logs_policy",
            "module.flow_log_bucket.aws_s3_bucket_public_access_block.block"
          ]
        }
      ]
    }
  ]
}